Reposition FAB to avoid nav bar overlap

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -252,7 +252,7 @@
 
 .fab {
   position: fixed;
-  bottom: 2rem;
+  bottom: 6rem;
   right: 1.5rem;
   width: 64px;
   height: 64px;
